--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "**/log": true
     },
     "cSpell.words": [
+        "aruco",
         "athackst",
         "autopep",
         "cmake",
@@ -43,6 +44,7 @@
         "deque",
         "devcontainer",
         "DISTRO",
+        "envsubst",
         "getent",
         "ints",
         "NOPASSWD",
